Removes old links and updates some statements.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -125,22 +125,22 @@
                 <li>Inline CSS referenced by @import in other CSS and images in HTML pages</li>
                 <li>Filter the HTML pages with a zero-config solution</li>
             </ul>
-
-            <p><a class="btn btn-info" href="project.html#roadmap">More features coming soon &raquo;</a></p>
+            <p><a class="btn btn-info" href="wuic-documentation.html#_features">See all the features &raquo;</a></p>
         </div>
         <div class="span4 slideLeft">
             <h3><img src="wiki-images/logo/nut.png" width="20px" height="22px" />&nbsp;Why WUIC?</h3>
             <ul>
-                <li>Modular API to be integrated in various infrastructures and to keep scalibility</li>
+                <li>Easy to deploy to any servlet container in an unified backend configuration</li>
+                <li>Modular API to be integrated in various infrastructures and to keep scalability</li>
                 <li>Good integration with popular projects like Thymeleaf or Spring framework</li>
                 <li>On the fly solution to automate and to be configurable as much as possible</li>
-                <li>Possibility to process statics at build time if necessary</li>
+                <li>Possibility to process statics at build time with Maven or ANT</li>
                 <li>Not only processes: also takes care about where to pick and to serve statics</li>
-                <li>Young but has already proved its strength in production</li>
+                <li>Advanced HTTP caching mechanism on client side with automatic refresh</li>
                 <li>Very slim with minimal dependencies</li>
                 <li>A lot of third-party supports easy to enable</li>
                 <li>Available on the maven central repository</li>
-                <li>Open source project under <a href="https://github.com/wuic/wuic/wiki/License" target="_blank" title="WUIC License">MIT license</a></li>
+                <li>Open source project under <a href="wuic-documentation.html#_license" target="_blank" title="WUIC License">MIT license</a></li>
             </ul>
         </div>
         <div class="span4 slideLeft">
@@ -155,7 +155,7 @@
                 <pre>mvn jetty:run</pre>
             </p>
             <p>
-                You may also be interested by our <a href="https://github.com/wuic/wuic/wiki">wiki</a>.
+                You may also be interested by our <a href="wuic-documentation.html">documentation</a>.
             </p>
             <p><a class="btn btn-info" href="project.html#release">Official release &raquo;</a></p>
         </div>
@@ -187,8 +187,8 @@
         + '<ul>'
         + '<li style="line-height: 20px;">Find maven dependencies available <a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22com.github.wuic%22" target="_blank">here</a></li>'
         + '<li style="line-height: 20px;">Quick start with the <a href="https://github.com/wuic/wuic-samples" target="_blank">samples</a></li>'
-        + '<li style="line-height: 20px;">Read the 5 minutes tutorials <a href="https://github.com/wuic/wuic/wiki/basic-js-css-processing" target="_blank">here</a></li>'
-        + '<li style="line-height: 20px;">Read the <a href="https://github.com/wuic/wuic/wiki/FAQ" target="_blank">FAQ</a></li>'
+        + '<li style="line-height: 20px;">Read the 5 minutes tutorials <a href="tutorials.html#_jsp_thymeleaf_processing" target="_blank">here</a></li>'
+        + '<li style="line-height: 20px;">Read the <a href=faq.html" target="_blank">FAQ</a></li>'
         + '<li style="line-height: 20px;">See the <a href="https://github.com/wuic/wuic/" target="_blank">source code</a></li>'
         + '<li style="line-height: 20px;">Check the <a href="https://github.com/wuic/wuic/blob/master/changelog.txt" target="_blank">changelogs</a></li>'
         + '</ul>');
