Adds webjars support.
Fixes wuic/wuic#185

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -188,7 +188,7 @@
         + '<li style="line-height: 20px;">Find maven dependencies available <a href="http://search.maven.org/#search%7Cga%7C1%7Cg%3A%22com.github.wuic%22" target="_blank">here</a></li>'
         + '<li style="line-height: 20px;">Quick start with the <a href="https://github.com/wuic/wuic-samples" target="_blank">samples</a></li>'
         + '<li style="line-height: 20px;">Read the 5 minutes tutorials <a href="tutorials.html#_jsp_thymeleaf_processing" target="_blank">here</a></li>'
-        + '<li style="line-height: 20px;">Read the <a href=faq.html" target="_blank">FAQ</a></li>'
+        + '<li style="line-height: 20px;">Read the <a href="faq.html" target="_blank">FAQ</a></li>'
         + '<li style="line-height: 20px;">See the <a href="https://github.com/wuic/wuic/" target="_blank">source code</a></li>'
         + '<li style="line-height: 20px;">Check the <a href="https://github.com/wuic/wuic/blob/master/changelog.txt" target="_blank">changelogs</a></li>'
         + '</ul>');
